--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 This is alpha software. Don't use it.
+
+To the extent possible under law, the authors have dedicated all
+copyright and related and neighboring rights to this software to the
+public domain worldwide. This software is distributed without any
+warranty. See COPYING.
