--- a/README
+++ b/README
@@ -6,7 +6,7 @@ https://gitweb.torproject.org/torspec.git/tree/proposals/217-ext-orport-auth.txt
 https://gitweb.torproject.org/torspec.git/tree/proposals/232-pluggable-transports-through-proxy.txt
 
 To download a copy of the library into $GOPATH:
-	go get git.torproject.org/pluggable-transports/goptlib.git
+	go get github.com/OperatorFoundation/shapeshifter-ipc
 
 See the included example programs for examples of how to use the
 library. To build them, enter their directory and run "go build".
@@ -16,7 +16,7 @@ The recommended way to start writing a new transport plugin is to copy
 dummy-client or dummy-server and make changes to it.
 
 There is browseable documentation here:
-https://godoc.org/git.torproject.org/pluggable-transports/goptlib.git
+https://godoc.org/github.com/OperatorFoundation/shapeshifter-ipc
 
 Report bugs to the tor-dev@lists.torproject.org mailing list or to the
 bug tracker at https://trac.torproject.org/projects/tor.
